--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
-      <a
+      <h1>Hi 👋!</h1>
+      <a 
         target="_blank"
         href="/rss.xml"
         class="rss-link"
@@ -41,19 +41,15 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        I'm Mehdi a FullStack Developper currently based in Paris.
+      </p>
+
+      <p>
+        I work mostly with TypeScript and React to build fullstack web apps.
+        On the side, I have been exploring new tech.
       </p>
       <p>
-        Read the blog posts or check
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
+        I will be documenting my learnings and breakthrough as I go along.
       </p>
       {
         // only display if at least one social link is enabled
@@ -64,6 +60,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           </div>
         )
       }
+       <p class ="flex justify-end">
+        Have fun reading !
+    </p>
     </section>
 
     <Hr />
@@ -138,7 +137,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     @apply my-2;
   }
   .social-wrapper {
-    @apply mt-4 flex flex-col sm:flex-row sm:items-center;
+    @apply mt-4 flex flex-col sm:flex-row sm:items-center ;
   }
   .social-links {
     @apply mb-1 mr-2 whitespace-nowrap sm:mb-0;
